* Close #297: Refactor layout of Total widget to prevent wrapping long decimal values

--- a/src/view/css/app.scss
+++ b/src/view/css/app.scss
@@ -388,38 +388,22 @@ label {
   overflow: hidden;
 }
 
-/* Information tiles */
-.info-tiles {
+/* Total list */
+.total-list {
   display: flex;
   flex-flow: row wrap;
+  gap: 10px;
   min-width: 220px;
   max-width: 300px;
 }
 
-.info-tile {
+.total-list__item {
   display: inline-flex;
-  width: 80px;
-  height: 80px;
-  margin: 0 10px 10px 0;
   padding: 5px;
+  font-size: 16px;
+  white-space: nowrap;
   color: #000000;
   background-color: #d0d0d0;
-  position: relative;
-  overflow: hidden;
-}
-
-.info-tile__title {
-  font-size: 16px;
-  bottom: 5px;
-  position: absolute;
-}
-
-.info-tile__subtitle {
-  font-size: 12px;
-  text-align: right;
-  top: 5px;
-  right: 5px;
-  position: absolute;
 }
 
 /* DropDown */
