--- a/src/view/css/themes/dark-theme.scss
+++ b/src/view/css/themes/dark-theme.scss
@@ -243,9 +243,11 @@
   }
 
   /* Tiles list */
-  .tiles > span,
-  .info-tiles > span {
-    color: var(--main-text-color);
+  .tiles,
+  .total-list {
+    .nodata-message {
+      color: var(--main-text-color);
+    }
   }
 
   /* Swap button */
